@@ -1,3 +1,7 @@
+Fri Jun  1 17:26:24 2001  K.Kosako  <kosako@sofnec.co.jp>
+
+	* hash.c (replace_i): ignore when key == Qundef.
+
 Fri Jun  1 11:21:04 2001  WATANABE Hirofumi  <eban@ruby-lang.org>
 
 	* configure.in: use waitpid on mingw32.
